--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^13.1.9",
     "axios": "^0.21.4",
+    "jest": "^27.2.5",
+    "jest-circus": "^27.2.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "test": "^0.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
